--- a/assets/scenario/dummy1/SP/CSS/destyle.css
+++ b/assets/scenario/dummy1/SP/CSS/destyle.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:960px) {
+@media screen and (max-width: 960px) {
   /*! destyle.css v4.0.1 | MIT License | https://github.com/nicolas-cusan/destyle.css */
 
   /* Reset box-model and set borders */
@@ -248,16 +248,16 @@
   */
 
   button,
-  [type="button"],
-  [type="reset"],
-  [type="submit"] {
+  [type='button'],
+  [type='reset'],
+  [type='submit'] {
     cursor: pointer;
   }
 
   button:disabled,
-  [type="button"]:disabled,
-  [type="reset"]:disabled,
-  [type="submit"]:disabled {
+  [type='button']:disabled,
+  [type='reset']:disabled,
+  [type='submit']:disabled {
     cursor: default;
   }
 
@@ -315,8 +315,8 @@
   * Correct the cursor style of increment and decrement buttons in Chrome.
   */
 
-  [type="number"]::-webkit-inner-spin-button,
-  [type="number"]::-webkit-outer-spin-button {
+  [type='number']::-webkit-inner-spin-button,
+  [type='number']::-webkit-outer-spin-button {
     height: auto;
   }
 
@@ -324,7 +324,7 @@
   * Correct the outline style in Safari.
   */
 
-  [type="search"] {
+  [type='search'] {
     outline-offset: -2px; /* 1 */
   }
 
@@ -332,7 +332,7 @@
   * Remove the inner padding in Chrome and Safari on macOS.
   */
 
-  [type="search"]::-webkit-search-decoration {
+  [type='search']::-webkit-search-decoration {
     -webkit-appearance: none;
   }
 
@@ -349,7 +349,7 @@
   /**
   * Fix appearance for Firefox
   */
-  [type="number"] {
+  [type='number'] {
     -moz-appearance: textfield;
   }
 
